--- a/Views/signUp.ejs
+++ b/Views/signUp.ejs
@@ -13,7 +13,71 @@
 </head>
 
 <body>
-    <h1>Sign Up Page kim</h1>
+    <div class="container border border-3 border-dark mt-5 p-5 w-50">
+        <form class="needs-validation" action="http://localhost:5000/register" method="POST" oninput='confirmPassword.setCustomValidity(confirmPassword.value != password.value ? document.getElementById("pw").innerHTML = "Passwords are not same" : "")' novalidate>
+            <h2 class="mx-auto text-center w-85">Welcome to MINI-GROCERT-SHOP</h2>
+            <br>
+            <p class="mx-auto text-center text-secondary w-75">Don't have an account? Create your own account, it take less than a minute.</p>
+            <br>
+            <div class="form-group">
+                <label for="usr" class="font-weight-bold">Username</label>
+                <input type="text" class="form-control border border-5 border-secondary" minlength="3" id="usr" required placeholder="Username" name="username">
+                <div class="invalid-feedback">Please fill out this field (at least 3 letter).</div>
+            </div>
+            <div class="form-group">
+                <label for="usr" class="font-weight-bold">Email address</label>
+                <input class="form-control border border-5 border-secondary" type="email" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" required name="email">
+                <div class="invalid-feedback">Please fill out this field correctly (example@example.com).</div>
+            </div>
+            <div class="form-group">
+                <label for="usr" class="font-weight-bold">Password</label>
+                <input class="form-control border border-5 border-secondary" autocomplete="password" type="password" minlength="8" id="enterPassword" placeholder="Password" name="password" required>
+                <div class="invalid-feedback">Please fill out this field correctly (password 8 digit up).</div>
+            </div>
+            <div class="form-group">
+                <label for="usr" class="font-weight-bold">Confirm Password</label>
+                <input class="form-control border border-5 border-secondary" autocomplete="password" type="password" minlength="8" id="confirmPassword" placeholder="Confirm Password" name="confirmPassword" required name="password">
+                <div class="invalid-feedback" id="pw">Please fill out this field correctly (password 8 digit up).</div>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="gridCheck" required>
+                <label class="form-check-label" for="gridCheck">
+                    I accept Terms and Conditions.
+                </label>
+                <div class="invalid-feedback">You need to agree with our accept Terms and Conditions.</div>
+            </div>
+            <br>
+            <button type="submit" class="btn btn-primary btn-block font-weight-bold">Log In</button>
+        </form>
+    </div>
+    <div class="text-center p-3">
+        Already have an account?
+        <a href="http://localhost:5000/signin">Sign In</a>
+    </div>
+    <div class="text-center p-3 font-weight-bold">
+        2022 © MINI-GROCERT-SHOP by KIMTEPAMATAK
+    </div>
+
+    <script>
+        // Disable form submissions if there are invalid fields
+        (function() {
+            'use strict';
+            window.addEventListener('load', function() {
+                // Get the forms we want to add validation styles to
+                var forms = document.getElementsByClassName('needs-validation');
+                // Loop over them and prevent submission
+                var validation = Array.prototype.filter.call(forms, function(form) {
+                    form.addEventListener('submit', function(event) {
+                        if (form.checkValidity() === false) {
+                            event.preventDefault();
+                            event.stopPropagation();
+                        }
+                        form.classList.add('was-validated');
+                    }, false);
+                });
+            }, false);
+        })();
+    </script>
 </body>
 
 </html>
