--- a/Views/signIn.ejs
+++ b/Views/signIn.ejs
@@ -9,38 +9,38 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/Assets/CSS/signIn.css">
+    <link rel="stylesheet" href="/Assets/CSS/authen.css">
 </head>
 
 <body>
-    <div class="container border border-3 border-dark mt-5 p-5 w-50">
-        <form class="needs-validation" action="http://localhost:5000/login" method="POST" novalidate>
-            <h2 class="mx-auto text-center w-85">Welcome to MINI-GROCERT-SHOP</h2>
-            <br>
-            <p class="mx-auto text-center text-secondary w-75">Enter your email address and password to access to continue</p>
-            <br>
+    <div class="container border border-3 border-dark mt-5">
+        <form class="needs-validation" action="/login" method="POST" novalidate>
+            <h3 class="mx-auto text-center w-85 mb-3">MINI GROCERY STORE</h3>
+            <p class="mx-auto text-center text-secondary w-75 mb-5">Enter your email address and password to access to continue</p>
             <div class="form-group">
-                <label for="usr" class="font-weight-bold">Email Address</label>
-                <input class="form-control border border-5 border-secondary" type="email" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" required name="email">
+                <label for="usr">Email Address</label>
+                <input class="form-control" type="email" id="exampleInputEmail1" aria-describedby="emailHelp" required name="email">
                 <div class="invalid-feedback">Please fill out this field correctly (example@example.com).</div>
             </div>
             <div class="form-group">
-                <label for="usr" class="font-weight-bold">Password</label>
-                <input class="form-control border border-5 border-secondary" autocomplete="password" minlength="8" type="password" id="Password" placeholder="Password" required name="password">
+                <label for="usr" class="mt-3">Password</label>
+                <input class="form-control" autocomplete="password" minlength="8" type="password" id="Password" required name="password">
                 <div class="invalid-feedback">Please fill out this field correctly (password 8 digit up).</div>
             </div>
             <br>
             <br>
-            <button type="submit" class="btn btn-primary btn-block font-weight-bold">Log In</button>
+            <div class="text-center">
+                <button type="submit" class="btn btn-light py-3 px-5 rounded-pill font-weight-bold min-w-25">SIGN IN</button>
+            </div>
         </form>
 
     </div>
     <div class="text-center p-3">
         Don't have an account?
-        <a href="http://localhost:5000/signup">Sign Up</a>
+        <a href="/signup">Sign Up</a>
     </div>
     <div class="text-center p-3 font-weight-bold">
-        2022 © MINI-GROCERT-SHOP by KIMTEPAMATAK
+        2022 © MINI GROCERT SHOP
     </div>
 
     <script>
