--- a/Views/signUp.ejs
+++ b/Views/signUp.ejs
@@ -9,34 +9,32 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/Assets/CSS/signUp.css">
+    <link rel="stylesheet" href="/Assets/CSS/authen.css">
 </head>
 
 <body>
-    <div class="container border border-3 border-dark mt-5 p-5 w-50">
-        <form class="needs-validation" action="http://localhost:5000/register" method="POST" oninput='confirmPassword.setCustomValidity(confirmPassword.value != password.value ? document.getElementById("pw").innerHTML = "Passwords are not same" : "")' novalidate>
-            <h2 class="mx-auto text-center w-85">Welcome to MINI-GROCERT-SHOP</h2>
-            <br>
-            <p class="mx-auto text-center text-secondary w-75">Don't have an account? Create your own account, it take less than a minute.</p>
-            <br>
+    <div class="container border border-3 border-dark mt-4">
+        <form class="needs-validation" action="/register" method="POST" oninput='confirmPassword.setCustomValidity(confirmPassword.value != password.value ? document.getElementById("pw").innerHTML = "Passwords are not same" : "")' novalidate>
+            <h3 class="mx-auto text-center w-85 mb-3">MINI GROCERY STORE</h3>
+            <p class="mx-auto mb-3 text-center text-secondary w-75">Don't have an account? Create your own account, it take less than a minute.</p>
             <div class="form-group">
-                <label for="usr" class="font-weight-bold">Username</label>
-                <input type="text" class="form-control border border-5 border-secondary" minlength="3" id="usr" required placeholder="Username" name="username">
+                <label for="usr">Username</label>
+                <input type="text" class="form-control" minlength="3" id="usr" required name="username">
                 <div class="invalid-feedback">Please fill out this field (at least 3 letter).</div>
             </div>
             <div class="form-group">
-                <label for="usr" class="font-weight-bold">Email address</label>
-                <input class="form-control border border-5 border-secondary" type="email" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" required name="email">
+                <label for="usr">Email address</label>
+                <input class="form-control" type="email" id="exampleInputEmail1" aria-describedby="emailHelp" required name="email">
                 <div class="invalid-feedback">Please fill out this field correctly (example@example.com).</div>
             </div>
             <div class="form-group">
-                <label for="usr" class="font-weight-bold">Password</label>
-                <input class="form-control border border-5 border-secondary" autocomplete="password" type="password" minlength="8" id="enterPassword" placeholder="Password" name="password" required>
+                <label for="usr">Password</label>
+                <input class="form-control" autocomplete="password" type="password" minlength="8" id="enterPassword" name="password" required>
                 <div class="invalid-feedback">Please fill out this field correctly (password 8 digit up).</div>
             </div>
             <div class="form-group">
-                <label for="usr" class="font-weight-bold">Confirm Password</label>
-                <input class="form-control border border-5 border-secondary" autocomplete="password" type="password" minlength="8" id="confirmPassword" placeholder="Confirm Password" name="confirmPassword" required name="password">
+                <label for="usr">Confirm Password</label>
+                <input class="form-control" autocomplete="password" type="password" minlength="8" id="confirmPassword" name="confirmPassword" required name="password">
                 <div class="invalid-feedback" id="pw">Please fill out this field correctly (password 8 digit up).</div>
             </div>
             <div class="form-check">
@@ -47,15 +45,17 @@
                 <div class="invalid-feedback">You need to agree with our accept Terms and Conditions.</div>
             </div>
             <br>
-            <button type="submit" class="btn btn-primary btn-block font-weight-bold">Log In</button>
+            <div class="text-center">
+                <button type="submit" class="btn btn-light py-3 px-5 rounded-pill font-weight-bold min-w-25">SIGN UP</button>
+            </div>
         </form>
     </div>
     <div class="text-center p-3">
         Already have an account?
-        <a href="http://localhost:5000/signin">Sign In</a>
+        <a href="/signin">Sign In</a>
     </div>
     <div class="text-center p-3 font-weight-bold">
-        2022 © MINI-GROCERT-SHOP by KIMTEPAMATAK
+        2022 © MINI GROCERT SHOP
     </div>
 
     <script>
