--- a/Public/Assets/CSS/adminPanel.css
+++ b/Public/Assets/CSS/adminPanel.css
@@ -132,3 +132,47 @@ table#demo2.js-sort-8 tbody tr td:nth-child(9),
 table#demo2.js-sort-9 tbody tr td:nth-child(10) {
     background: #dee;
 }
+
+body{
+    margin: 0;
+    padding: 0;
+    background-color:  #ffffff;
+    font-family: 'Montserrat', sans-serif;
+}
+form{
+    width: 600px;
+    margin: 100px auto  0 auto;
+    padding: 20px;
+    box-shadow: 0 4px 8px 0 #30475e, 0 4px 8px 0 #30475e;
+    color: rgb(0, 0, 0);
+    background-color: lightgray;
+}
+h5{
+    text-align: center;
+}
+
+.div1{
+    display: inline-block;
+    
+}
+.box2{
+    border: none;
+    border-radius: 15px;
+    padding: 10px;
+    margin: 10px 0 15px 0;
+    background-color: #30475e;
+}
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btn{
+    width: 30%;
+    padding: 10px;
+    border: none;
+    border-radius: 15px;
+    background-color: #ffffff;
+    font-size: 18px;
+    color: rgb(0, 0, 0);
+}
