--- a/Views/adminPanel.ejs
+++ b/Views/adminPanel.ejs
@@ -24,6 +24,7 @@
         <div class="float-left">Mini-Grocery-Store</div>
         <div class="float-right d-flex flex-row align-items-center">
             <a class="text-decoration-none" href="http://localhost:5000">
+                <i class="fas fa-shopping-cart"></i>
                 <i class="fas fa-user"></i>
             </a>
             <!--<span>&nbsp;|</span>
