crud purchase and list product at homepage

--- a/Views/homePage.ejs
+++ b/Views/homePage.ejs
@@ -44,7 +44,7 @@
             <label for="search-box" class="fas fa-search"></label>
         </form>
 
-        <div class="shopping-cart">
+        <!-- <div class="shopping-cart">
             <div class="box">
                 <i class="fas fa-trash"></i>
                 <img src="/Assets/Image/New&Image/cart-img-1.png" alt="">
@@ -74,7 +74,7 @@
             </div>
             <div class="total"> total : $19.69/- </div>
             <a href="#" class="btn">checkout</a>
-        </div>
+        </div> -->
 
         <form action="" class="login-form">
             <h3>login now</h3>
@@ -251,7 +251,7 @@
 
         <h1 class="heading"> our <span>products</span> </h1>
 
-        <div class="box-container">
+        <div class="box-container" id="listProducts">
 
             <div class="box">
                 <img src="/Assets/Image/New&Image/product-1.png" alt="">
@@ -486,7 +486,7 @@
                 <p>subscribe for latest updates</p>
                 <input type="email" placeholder="your email" class="email">
                 <input type="submit" value="subscribe" class="btn">
-                <img src="image/payment.png" class="payment-img" alt="">
+                <!-- <img src="image/payment.png" class="payment-img" alt=""> -->
             </div>
 
         </div>
@@ -497,24 +497,11 @@
 
     <!-- footer section ends -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
     <!-- custom js file link  -->
-    <script src="homePage.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/Assets/JS/homePage.js"></script>
 
 </body>
 
