--- a/Views/paymentPage.ejs
+++ b/Views/paymentPage.ejs
@@ -25,19 +25,18 @@
             <br>
                         <table class="table table-hover js-sort-table" id="demo2">
                             <thead>
-                                <tr>
-                                    <th class="js-sort-number text-center" id="col1">Product</th>
-                                    <th id="col2">Name</th>                                    
+                                <tr class="ccenter">
+                                    <th class="js-sort-number text-center" id="col8">Product</th>                                  
                                     <th id="col3">Price</th>
-                                    <th id="col4">Quality</th>
-                                    <th id="col6">Total</th>
+                                    <th id="col3">Quality</th>
+                                    <th id="col4">Total</th>
+                                    <th id="col5">Edit</th>
                                 </tr>
                             </thead>
                             <tbody id="bodyTable">
-                                <tr>
+                                <tr class="ccenter">
                                     <th class="d-none" scope="row">1</th>
                                     <td><img src="/Public/Assets/Image/Vegetable/broccoli.jpeg" alt="Shrimp"></td>
-                                    <td>Shrimp</td>
                                     <td>5$</td>
                                     <td>4</td>
                                     <td>20$</td>
@@ -47,10 +46,9 @@
                                 </tr>
                             </tbody>
                             <tbody id="bodyTable">
-                                <tr>
+                                <tr class="ccenter">
                                     <th class="d-none" scope="row">1</th>
                                     <td><img src="/Public/Assets/Image/Vegetable/broccoli.jpeg" alt="Shrimp"></td>
-                                    <td>Shrimp</td>
                                     <td>5$</td>
                                     <td>4</td>
                                     <td>20$</td>
@@ -64,10 +62,8 @@
                         <br>
                         <h5>Total:</h5>
                         <h5>40$</h5>
-                        <br>
-            
             <div class="center">
-            <button class="btn" type="button">Buy</button>
+            <button class="btn" type="button">Confirm</button>
             </div>
         </form>
     </body>
