--- a/Views/homePage.ejs
+++ b/Views/homePage.ejs
@@ -453,7 +453,7 @@
         <div class="box-container">
 
             <div class="box">
-                <h3> groco <i class="fas fa-shopping-basket"></i> </h3>
+                <h3> Mini Gocery Store <i class="fas fa-shopping-basket"></i> </h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam, saepe.</p>
                 <div class="share">
                     <a href="#" class="fab fa-facebook-f"></a>
@@ -481,13 +481,13 @@
                 <a href="#" class="links"> <i class="fas fa-arrow-right"></i> blogs </a>
             </div>
 
-            <div class="box">
+            <!-- <div class="box">
                 <h3>newsletter</h3>
                 <p>subscribe for latest updates</p>
                 <input type="email" placeholder="your email" class="email">
                 <input type="submit" value="subscribe" class="btn">
-                <!-- <img src="image/payment.png" class="payment-img" alt=""> -->
-            </div>
+                <img src="image/payment.png" class="payment-img" alt="">
+            </div> -->
 
         </div>
 
