--- a/Views/paymentPage.ejs
+++ b/Views/paymentPage.ejs
@@ -134,7 +134,7 @@
         <div class="box-container">
 
             <div class="box">
-                <h3> groco <i class="fas fa-shopping-basket"></i> </h3>
+                <h3> Mini Gocery Store <i class="fas fa-shopping-basket"></i> </h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam, saepe.</p>
                 <div class="share">
                     <a href="#" class="fab fa-facebook-f"></a>
